# serverless-appsync-todoapp

./: README.md
backend/: .gitignore  package-lock.json  package.json  pyproject.toml
backend/src/: requirements.txt
backend/src/appsync/: appsync.yml  serverless.yml
backend/src/appsync/schemas/: todos.graphql
backend/src/common/: appsync_util.py  timestamp_util.py
backend/src/customs/: appsync-dev.yml  dev.yml
backend/src/resources/: serverless-cognito.yml  serverless-dynamodb.yml  serverless-lambdalayers.yml
backend/src/tests/: __init__.py  appsync_testutil.py  todo_test_setup.py
backend/src/tests/todos/: test_todo_handler.py
backend/src/todos/: serverless.yml  todo_handler.py
backend/src/todos/domain/: todo_service.py
